[package]
name = "aoc"
version = "0.1.0"
authors = ["Thom van der Woude <t.b.vanderwoude@student.tudelft.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
permutohedron = "0.2.4"
regex = "1.3.1"
cached = "0.11.0"
console = "0.9.1"
rand = "0.7.2"
queues = "1.0.2"
petgraph = "0.4.13"
bimap = "0.4.0"
modinverse = "0.1.0"
mod_exp = "1.0.1"