[package]
name = "aoc"
version = "0.1.0"
authors = ["Thom van der Woude <t.b.vanderwoude@student.tudelft.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
permutohedron = "0.2.4"
regex = "1.3.1"
cached = "0.11.0"
console = "0.9.1"
rand = "0.7.2"
queues = "1.0.2"
itertools = "0.9.0"
petgraph = "0.4.13"
bimap = "0.4.0"
modinverse = "0.1.0"
mod_exp = "1.0.1"
structopt = "0.3.5"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "main"
path = "src/main.rs"
[[bin]]
name = "day01"
path = "src/bin/day01.rs"
[[bin]]
name = "day02"
path = "src/bin/day02.rs"
[[bin]]
name = "day03"
path = "src/bin/day03.rs"
[[bin]]
name = "day04"
path = "src/bin/day04.rs"
[[bin]]
name = "day05"
path = "src/bin/day05.rs"
[[bin]]
name = "day06"
path = "src/bin/day06.rs"
[[bin]]
name = "day07"
path = "src/bin/day07.rs"